--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <title>Xiaoxuan Wu</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/07bc066b74.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+
+
+</head>
+
+<body>
+    <section>
+        <div class="cursor"></div>
+
+        <div class="header">
+            <div class="logo">
+                <img src="/Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
+                <hr class="header-divider">
+            </div>
+        </div>
+
+        <div class="main-content-container">
+            <div class="hero">
+                <h2>On the premise of meeting the needs, it is my pursuit to achieve warm communication
+                </h2>
+            </div>
+
+            <div class="item-wrapper">
+                <div class="item">
+                    <p class="project-title">Selected projects</h4>
+                </div>
+
+                <div class="item clickable-item">
+                    <a style="width:auto; display:flex; cursor:none;" href="pet.html">
+                        <div class="vl"></div>
+                        <div class="item-number">
+                            <h1>3</h1>
+                        </div>
+                        <div class="image-title">
+                            <div class="img-hover-zoom">
+                                <img src="/Images/Image.jpg" width=100%></div>
+                            <h3 class="item-title">Pet Adoption</h4>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="item clickable-item">
+                    <div class="vl"></div>
+                    <div class="item-number">
+                        <h1>3</h1>
+                    </div>
+                    <div class="image-title">
+                        <div class="img-hover-zoom">
+                            <img src="/Images/Image.jpg" width=100%></div>
+                        <h3 class="item-title">Pet Adoption</h4>
+                    </div>
+                </div>
+
+                <div class="item clickable-item">
+                    <div class="vl"></div>
+                    <div class="item-number">
+                        <h1>3</h1>
+                    </div>
+                    <div class="image-title">
+                        <div class="img-hover-zoom">
+                            <img src="/Images/Image.jpg" width=100%></div>
+                        <h3 class="item-title">Pet Adoption</h4>
+                    </div>
+                </div>
+                <div class="item clickable-item">
+                    <div class="vl"></div>
+                    <div class="item-number">
+                        <h1>3</h1>
+                    </div>
+                    <div class="image-title">
+                        <div class="img-hover-zoom">
+                            <img src="/Images/Image.jpg" width=100%></div>
+                        <h3 class="item-title">Pet Adoption</h4>
+                    </div>
+                </div>
+                <div class="item clickable-item">
+                    <div class="vl"></div>
+                    <div class="item-number">
+                        <h1>3</h1>
+                    </div>
+                    <div class="image-title">
+                        <div class="img-hover-zoom">
+                            <img src="/Images/Image.jpg" width=100%></div>
+                        <h3 class="item-title">Pet Adoption</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="introduction">
+                <h2>
+                    Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is
+                    Xiaoxuan, Visual deisnger based in new york</h2>
+            </div>
+        </div>
+        <div class="footer">
+            <p class="footer-left"><a style="margin-right: 30px;">about</a> <a>resume</a></p>
+            <p class="footer-right">Designed and coded by me</p>
+
+        </div>
+    </section>
+    <script src="/script.js "></script>
+</body>
+
+
+
+</html>
