--- a/pet.html
+++ b/pet.html
@@ -23,7 +23,9 @@
         <div class="page-body">
             <div class="page-title-wrapper">
                 <div class="icon-title">
-                    <div class="back-logo"> <img src="Images/Arrow 1.png"></div>
+                    <div class="back-logo">
+                        <a href="https://www.xiaoxuanwu.com/"><img src="Images/Arrow 1.png"></a>
+                    </div>
 
                     <div class="project-title-wrapper">
                         <p class="project-subhead">Product Design</p>
@@ -39,10 +41,13 @@
                     <p class="caption-subhead">Passion project</p>
                     <p class="caption">Inspired by my struggle to adopt a dog during the pandemic, I spent 2 weeks during my spring break to explore ways to improve the pet adoption experience.</p>
                 </div>
-
-
+                <div>
+                    <p class="caption">“It’s harder to adopt a dog than a child.”</p>
+                </div>
             </div>
+
         </div>
+
     </section>
 </body>
 
