--- a/index.html
+++ b/index.html
@@ -38,79 +38,93 @@
                     <p class="project-title">Selected projects</h4>
                 </div>
 
-                <div class="item clickable-item">
-                    <a style="width:auto; display:flex; cursor:none;" href="pet.html">
-                        <div class="vl"></div>
-                        <div class="item-number">
+                <a class="item clickable-item" href="pet.html ">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>1</h1>
+                        </div>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="/Images/Pet images/pet first page.png "></div>
+                            <h3 class="item-title ">Pet Adoption, <i>Product Design</i></h4>
+                        </div>
+
+                    </div>
+                </a>
+
+                <a class="item clickable-item" href="wunderkind.html">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>2</h1>
+                        </div>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="/Images/wunderkind/wunderkind first page.png " width=100%></div>
+                            <h3 class="item-title ">Wunderkind,<i>CX Design, Marketing Design</i></h4>
+                        </div>
+                    </div>
+                </a>
+
+                <a class="item clickable-item" href="wunderkind.html">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
                             <h1>3</h1>
                         </div>
-                        <div class="image-title">
-                            <div class="img-hover-zoom">
-                                <img src="/Images/Image.jpg" width=100%></div>
-                            <h3 class="item-title">Pet Adoption</h4>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="/Images/Image.jpg " width=100%></div>
+                            <h3 class="item-title ">Pet Adoption</h4>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-
-                <div class="item clickable-item">
-                    <div class="vl"></div>
-                    <div class="item-number">
-                        <h1>3</h1>
+                <a class="item clickable-item" href="wunderkind.html">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>3</h1>
+                        </div>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="/Images/Image.jpg " width=100%></div>
+                            <h3 class="item-title ">Pet Adoption</h4>
+                        </div>
                     </div>
-                    <div class="image-title">
-                        <div class="img-hover-zoom">
-                            <img src="/Images/Image.jpg" width=100%></div>
-                        <h3 class="item-title">Pet Adoption</h4>
+                </a>
+                <a class="item clickable-item" href="graphic-design.html">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>3</h1>
+                        </div>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="/Images/Graphic design/first page graphic design.png " width=100%></div>
+                            <h3 class="item-title ">Playground, <i>Graphic Design</i></h4>
+                        </div>
                     </div>
-                </div>
-
-                <div class="item clickable-item">
-                    <div class="vl"></div>
-                    <div class="item-number">
-                        <h1>3</h1>
-                    </div>
-                    <div class="image-title">
-                        <div class="img-hover-zoom">
-                            <img src="/Images/Image.jpg" width=100%></div>
-                        <h3 class="item-title">Pet Adoption</h4>
-                    </div>
-                </div>
-                <div class="item clickable-item">
-                    <div class="vl"></div>
-                    <div class="item-number">
-                        <h1>3</h1>
-                    </div>
-                    <div class="image-title">
-                        <div class="img-hover-zoom">
-                            <img src="/Images/Image.jpg" width=100%></div>
-                        <h3 class="item-title">Pet Adoption</h4>
-                    </div>
-                </div>
-                <div class="item clickable-item">
-                    <div class="vl"></div>
-                    <div class="item-number">
-                        <h1>3</h1>
-                    </div>
-                    <div class="image-title">
-                        <div class="img-hover-zoom">
-                            <img src="/Images/Image.jpg" width=100%></div>
-                        <h3 class="item-title">Pet Adoption</h4>
-                    </div>
-                </div>
+                </a>
             </div>
 
-            <div class="introduction">
+
+
+
+            <div class="introduction ">
                 <h2>
                     Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is
                     Xiaoxuan, Visual deisnger based in new york</h2>
             </div>
         </div>
-        <div class="footer">
-            <p class="footer-left"><a style="margin-right: 30px;">about</a> <a>resume</a></p>
-            <p class="footer-right">Designed and coded by me</p>
+        <div class="footer ">
+            <h4 class="footer-left "><a style="margin-right: 30px; ">about</a> <a>resume</a></h4>
+            <p class="footer-right ">Designed and coded by me</p>
 
         </div>
+
+
     </section>
     <script src="/script.js "></script>
 </body>
