--- a/pet.html
+++ b/pet.html
@@ -20,7 +20,7 @@
                 <hr class="header-divider">
             </div>
         </div>
-        <div class="page-body">
+        <div class="page-content">
             <div class="page-title-wrapper">
                 <div class="icon-title">
                     <div class="back-logo">
@@ -37,18 +37,134 @@
 
             <div class="page-body">
                 <img>
-                <div class="project-introduction">
-                    <p class="caption-subhead">Passion project</p>
+                <div class="project-section">
+                    <p class="project-subhead">Passion project</p>
                     <p class="caption">Inspired by my struggle to adopt a dog during the pandemic, I spent 2 weeks during my spring break to explore ways to improve the pet adoption experience.</p>
                 </div>
-                <div>
+
+                <div class="project-section">
+                    <img>
                     <p class="caption">“It’s harder to adopt a dog than a child.”</p>
+                </div>
+
+                <div class="project-section">
+                    <div class="caption-left">
+                        <p> After conducting polls and interviews with <strong>46</strong> participants including people who have <strong>adopted in the past and shelter volunteers</strong>, I condensed the results into 4 major main points.
+                        </p>
+                    </div>
+                    <div class="caption-right">
+                        <p>“It takes me a lot of time to browse and find a pet that is a good match and is available.”</p>
+                        <p>“The application process was really long and communicating with the shelter was hard.”</p>
+                        <p>“Shelters have to design and develop their own website, and their profile (on PetFinder) always direct people to their website, which is super hard to use.” </p>
+                    </div>
+                </div>
+
+                <div class="project-section">
+                    <div class="caption-left">
+                        <p>In the current user journey, adopters take 10 steps with 4 separate platforms. There are 4 major pain points in this process. People switch to other platforms on step 3 and after step 5. </p>
+                    </div>
+                    <div class="image-wrapper">
+                        <img src="Images/Pet images/current+proces.png">
+                    </div>
+                </div>
+
+                <div class="project-section">
+                    <div class="caption-left">
+                        <p>I wanted to differentiate the “want” features with the “need” features and prioritize the design of features that could generate high values to both shelters and adopters. I proposed features to 2 adopters and 1 shelter volunteer
+                            and ask them to rate how much they want and need each feature. I summarized the results in the diagram below.</p>
+                    </div>
+                    <div class="image-wrapper"> <img src="Images/Pet images/Feature prioritization.png">
+                    </div>
+                </div>
+
+                <div class="project-section ">
+                    <div class="caption-left ">
+                        <p class="project-subhead">Prototype 1.0</p>
+                        <p>Optimize browse, filters, and pet details to better address adopters’ concerns </p>
+                    </div>
+                    <div class="image-wrapper ">
+                        <img width="35%" src="Images/Pet images/Pet photo 1.png ">
+                        <img width="35%" src="Images/Pet images/Pet photo 2.png ">
+                        <img width="35%" src="Images/Pet images/Pet photo 5.png ">
+
+                    </div>
+                </div>
+
+
+                <div class=" project-section ">
+                    <div class="caption-left ">
+                        <p>Support shelters to share relevant information beyond adoptable pets, such as donation, events, volunteer, and foster within the platform. Make communication easier for adopters and shelters before, during and after the adoption
+                            by connecting the two sides directly and quickly via in-app chat. </p>
+                    </div>
+                    <div class="image-wrapper ">
+                        <img width="35%" src="Images/Pet images/Pet photo 3.png ">
+                        <img width="35%" src="Images/Pet images/Pet photo 4.png ">
+                    </div>
+                </div>
+
+                <div class=" project-section ">
+                    <div class="caption-left ">
+                        <p>Applications are usually long and tedious. Communications sometimes lost or delayed. My goal is to create a more accessible way to track applications for adopters. </p>
+                    </div>
+                    <div class="image-wrapper ">
+                        <img width="35%" src="Images/Pet images/Pet photo 6.png ">
+                        <img width="35%" src="Images/Pet images/Pet photo 7.png ">
+                    </div>
+                </div>
+
+                <div class=" project-section ">
+                    <p>After conducting 6 asynchronous first-click testing by asking participants to complete certain tasks and 3 think-aloud sessions, I noticed some usability issues that I overlooked.
+                    </p>
+                </div>
+
+                <div class=" project-section ">
+                    <div class="caption-left ">
+                        <p>“If I am in the process of searching for pets, I would click on the Saved Pets feature the most.” The success rate to find Saved Pets from Home screen was only 66.7%. In addition, the button is in the middle-upper left corner,
+                            which is hard to reach. I restructured the content architecture in the new version</p>
+                    </div>
+                    <div class="image-wrapper ">
+                        <img width="60%" src="Images/Pet images/Stretch+.png">
+                    </div>
+                    <p>Make viewing saved pets and shelters more visible and retrievable I moved “saved pets” from the Me tag to the main navigation bar. Following this, I thought it made sense to put the “followed shelter” tag under this category as well.</p>
+                    <div class="image-wrapper ">
+                        <img width="80%" src="Images/Pet images/Usability testing 1.png">
+                    </div>
+                </div>
+
+
+                <div class=" project-section ">
+                    <div class="caption-left ">
+                        <p>“I’m not very sure where click to view the entire application page. I thought these are four buttons that lead me to different things.” </p>
+                    </div>
+                    <div class="image-wrapper ">
+                        <img width="40%" src="Images/Pet images/application+status.png">
+                    </div>
+                    <p>Improve information clarity Users are better informed about their progress. CTAs are added to clarify clickable areas. </p>
+                    <div class="image-wrapper ">
+                        <img width="80%" src="Images/Pet images/Usability testing 2.png">
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div class="project-end">
+                <hr class="project-divider">
+                <div class="back-logo">
+                    <a href="https://www.xiaoxuanwu.com/"><img src="Images/Arrow 1.png">
+                        <p class="back-text">Back to all projects</p>
+                    </a>
                 </div>
             </div>
 
         </div>
-
+        <hr>
+        <div class="footer">
+            <h4 class="footer-left"><a style="margin-right: 30px;">about</a> <a>resume</a></h4>
+            <h4 class="footer-right">Designed and coded by me</h4>
+        </div>
     </section>
+
 </body>
 
 
