--- a/wunderkind.html
+++ b/wunderkind.html
@@ -19,7 +19,7 @@
     <section>
         <div class="header">
             <div class="logo">
-                <img src="/Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
+                <img src="/images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
                 <hr class="header-divider">
             </div>
         </div>
@@ -41,15 +41,15 @@
 
             <div class="page-body">
                 <div class="image-wrapper">
-                    <img src="Images/wunderkind/weezie desktop mock.jpg">
+                    <img src="images/wunderkind/weezie desktop mock.jpg">
                 </div>
                 <div class="image-wrapper">
-                    <img src="Images/wunderkind/Weezie email mock up.gif">
+                    <img src="images/wunderkind/Weezie email mock up.gif">
                 </div>
 
                 <h2>Gamification</h2>
                 <div class="image-wrapper">
-                    <img width="100%" src="Images/wunderkind/small-readywise-gamification-mockup.gif">
+                    <img width="100%" src="images/wunderkind/small-readywise-gamification-mockup.gif">
                 </div>
                 <div class="image-wrapper">
                     <img width="40%" src="Images/wunderkind/readywise-mobile.gif">
