--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="header">
             <div class="logo">
-                <img src="/Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
+                <img src="Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
                 <hr class="header-divider">
             </div>
         </div>
