--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </div>
                         <div class="image-title ">
                             <div class="img-hover-zoom ">
-                                <img src="/Images/Pet images/pet first page.png "></div>
+                                <img src="Images/Pet images/pet first page.png "></div>
                             <h3 class="item-title ">Pet Adoption, <i>Product Design</i></h4>
                         </div>
 
