--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="image-title ">
                             <div class="img-hover-zoom ">
-                                <img src="/Images/wunderkind/wunderkind first page.png " width=100%></div>
+                                <img src="Images/wunderkind/wunderkind first page.png " width=100%></div>
                             <h3 class="item-title ">Wunderkind,<i>CX Design, Marketing Design</i></h4>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                         </div>
                         <div class="image-title ">
                             <div class="img-hover-zoom ">
-                                <img src="/Images/Image.jpg " width=100%></div>
+                                <img src="Images/Image.jpg " width=100%></div>
                             <h3 class="item-title ">Pet Adoption</h4>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="image-title ">
                             <div class="img-hover-zoom ">
-                                <img src="/Images/Image.jpg " width=100%></div>
+                                <img src="Images/Image.jpg " width=100%></div>
                             <h3 class="item-title ">Pet Adoption</h4>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="image-title ">
                             <div class="img-hover-zoom ">
-                                <img src="/Images/Graphic design/first page graphic design.png " width=100%></div>
+                                <img src="Images/Graphic design/first page graphic design.png " width=100%></div>
                             <h3 class="item-title ">Playground, <i>Graphic Design</i></h4>
                         </div>
                     </div>
