--- a/wunderkind.html
+++ b/wunderkind.html
@@ -19,7 +19,7 @@
     <section>
         <div class="header">
             <div class="logo">
-                <img src="/images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
+                <img src="Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
                 <hr class="header-divider">
             </div>
         </div>
