--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <script src="https://kit.fontawesome.com/07bc066b74.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+
+
 
 
 </head>
 
 <body>
+
     <section>
         <div class="cursor"></div>
 
@@ -27,86 +32,92 @@
             </div>
         </div>
 
+
         <div class="main-content-container">
             <div class="hero">
-                <h2>On the premise of meeting the needs, it is my pursuit to achieve warm communication
+                <h2>On the premise of meeting users' needs, it is my pursuit to communicate with them
                 </h2>
             </div>
 
-            <div class="item-wrapper">
-                <div class="item">
-                    <p class="project-title">Selected projects</h4>
+
+            <div class="track">
+                <div class="camera">
+                    <div class="frame">
+                        <div class="item">
+                            <p class="project-title">Selected projects</h4>
+                        </div>
+
+                        <a class="item clickable-item" href="pet.html ">
+                            <div class="item-content-wrapper ">
+                                <div class="vl "></div>
+                                <div class="item-number ">
+                                    <h1>1</h1>
+                                </div>
+                                <div class="image-title ">
+                                    <div class="img-hover-zoom ">
+                                        <img src="Images/Pet images/pet first page.png "></div>
+                                    <h3 class="item-title ">Pet Adoption, <i>Product Design</i></h4>
+                                </div>
+
+                            </div>
+                        </a>
+
+                        <a class="item clickable-item" href="wunderkind.html">
+                            <div class="item-content-wrapper ">
+                                <div class="vl "></div>
+                                <div class="item-number ">
+                                    <h1>2</h1>
+                                </div>
+                                <div class="image-title ">
+                                    <div class="img-hover-zoom ">
+                                        <img src="Images/wunderkind/wunderkind first page.png " width=100%></div>
+                                    <h4 class="item-title ">Wunderkind,<i>CX Design, Marketing Design</i></h4>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a class="item clickable-item" href="wunderkind.html">
+                            <div class="item-content-wrapper ">
+                                <div class="vl "></div>
+                                <div class="item-number ">
+                                    <h1>3</h1>
+                                </div>
+                                <div class="image-title ">
+                                    <div class="img-hover-zoom ">
+                                        <img src="Images/Image.jpg " width=100%></div>
+                                    <h3 class="item-title ">Pet Adoption</h4>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a class="item clickable-item" href="wunderkind.html">
+                            <div class="item-content-wrapper ">
+                                <div class="vl "></div>
+                                <div class="item-number ">
+                                    <h1>3</h1>
+                                </div>
+                                <div class="image-title ">
+                                    <div class="img-hover-zoom ">
+                                        <img src="Images/Image.jpg " width=100%></div>
+                                    <h3 class="item-title ">Pet Adoption</h4>
+                                </div>
+                            </div>
+                        </a>
+                        <a class="item clickable-item" href="graphic-design.html">
+                            <div class="item-content-wrapper ">
+                                <div class="vl "></div>
+                                <div class="item-number ">
+                                    <h1>3</h1>
+                                </div>
+                                <div class="image-title ">
+                                    <div class="img-hover-zoom ">
+                                        <img src="Images/Graphic design/first page graphic design.png " width=100%></div>
+                                    <h3 class="item-title ">Playground, <i>Graphic Design</i></h4>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-
-                <a class="item clickable-item" href="pet.html ">
-                    <div class="item-content-wrapper ">
-                        <div class="vl "></div>
-                        <div class="item-number ">
-                            <h1>1</h1>
-                        </div>
-                        <div class="image-title ">
-                            <div class="img-hover-zoom ">
-                                <img src="Images/Pet images/pet first page.png "></div>
-                            <h3 class="item-title ">Pet Adoption, <i>Product Design</i></h4>
-                        </div>
-
-                    </div>
-                </a>
-
-                <a class="item clickable-item" href="wunderkind.html">
-                    <div class="item-content-wrapper ">
-                        <div class="vl "></div>
-                        <div class="item-number ">
-                            <h1>2</h1>
-                        </div>
-                        <div class="image-title ">
-                            <div class="img-hover-zoom ">
-                                <img src="Images/wunderkind/wunderkind first page.png " width=100%></div>
-                            <h3 class="item-title ">Wunderkind,<i>CX Design, Marketing Design</i></h4>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="item clickable-item" href="wunderkind.html">
-                    <div class="item-content-wrapper ">
-                        <div class="vl "></div>
-                        <div class="item-number ">
-                            <h1>3</h1>
-                        </div>
-                        <div class="image-title ">
-                            <div class="img-hover-zoom ">
-                                <img src="Images/Image.jpg " width=100%></div>
-                            <h3 class="item-title ">Pet Adoption</h4>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="item clickable-item" href="wunderkind.html">
-                    <div class="item-content-wrapper ">
-                        <div class="vl "></div>
-                        <div class="item-number ">
-                            <h1>3</h1>
-                        </div>
-                        <div class="image-title ">
-                            <div class="img-hover-zoom ">
-                                <img src="Images/Image.jpg " width=100%></div>
-                            <h3 class="item-title ">Pet Adoption</h4>
-                        </div>
-                    </div>
-                </a>
-                <a class="item clickable-item" href="graphic-design.html">
-                    <div class="item-content-wrapper ">
-                        <div class="vl "></div>
-                        <div class="item-number ">
-                            <h1>3</h1>
-                        </div>
-                        <div class="image-title ">
-                            <div class="img-hover-zoom ">
-                                <img src="Images/Graphic design/first page graphic design.png " width=100%></div>
-                            <h3 class="item-title ">Playground, <i>Graphic Design</i></h4>
-                        </div>
-                    </div>
-                </a>
             </div>
 
 
@@ -114,12 +125,11 @@
 
             <div class="introduction ">
                 <h2>
-                    Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is Xiaoxuan, Visual deisnger based in new york Hi, my name is
-                    Xiaoxuan, Visual deisnger based in new york</h2>
+                    Xiaoxuan Wu is a product/visual designer based in New York. Currently designing at <i>Wunderkind</i>, a digital marketing company.</h2>
             </div>
         </div>
         <div class="footer ">
-            <h4 class="footer-left "><a style="margin-right: 30px; ">about</a> <a>resume</a></h4>
+            <h4 class="footer-left "> <a>resume</a></h4>
             <p class="footer-right ">Designed and coded by me</p>
 
         </div>
