--- a/wunderkind.html
+++ b/wunderkind.html
@@ -25,6 +25,7 @@
         </div>
 
         <div class="page-content">
+
             <div class="page-title-wrapper">
                 <div class="icon-title">
                     <div class="back-logo">
@@ -68,7 +69,7 @@
 
 
         <div class="footer">
-            <h4 class="footer-left"><a style="margin-right: 30px;">about</a> <a>resume</a></h4>
+            <h4 class="footer-left"><a style="margin-right: 30px;">about</a> <a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></h4>
             <h4 class="footer-right">Designed and coded by me</h4>
         </div>
 
