--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <script src="https://kit.fontawesome.com/07bc066b74.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.js"></script>
+    <script src="rellax.js"></script>
+    <script src="rellax.min.js"></script>
+
 
 
 
@@ -42,12 +49,12 @@
 
             <div class="track">
                 <div class="camera">
-                    <div class="frame">
+                    <div class="frame rellax" data-rellax-speed="-10" onLoad="pageScroll()">
                         <div class="item">
                             <p class="project-title">Selected projects</h4>
                         </div>
 
-                        <a class="item clickable-item" href="pet.html ">
+                        <a class="item clickable-item rellax" data-rellax-speed="-10" href="pet.html ">
                             <div class="item-content-wrapper ">
                                 <div class="vl "></div>
                                 <div class="item-number ">
@@ -62,7 +69,7 @@
                             </div>
                         </a>
 
-                        <a class="item clickable-item" href="wunderkind.html">
+                        <a class="item clickable-item rellax" data-rellax-speed="-10" href="wunderkind.html">
                             <div class="item-content-wrapper ">
                                 <div class="vl "></div>
                                 <div class="item-number ">
@@ -76,7 +83,7 @@
                             </div>
                         </a>
 
-                        <a class="item clickable-item" href="wunderkind.html">
+                        <a class="item clickable-item rellax" data-rellax-speed="-10" href="wunderkind.html">
                             <div class="item-content-wrapper ">
                                 <div class="vl "></div>
                                 <div class="item-number ">
