--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@16.1.3/dist/smooth-scroll.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@16.1.3/dist/smooth-scroll.js"></script>
 
 
 
@@ -45,7 +46,7 @@
 
             <div class="track">
                 <div class="camera">
-                    <div class="frame rellax" data-rellax-speed="-10" onLoad="pageScroll()">
+                    <div class="frame" onLoad="pageScroll()">
                         <div class="item">
                             <p class="project-title">Selected projects</h4>
                         </div>
@@ -106,19 +107,26 @@
                                 </div>
                             </div>
                         </a>
+
                         <a class="item clickable-item" href="graphic-design.html">
                             <div class="item-content-wrapper ">
                                 <div class="vl "></div>
                                 <div class="item-number ">
                                     <h1>3</h1>
                                 </div>
-                                <div class="image-title ">
+                                <div class="image-title">
                                     <div class="img-hover-zoom ">
                                         <img src="Images/Graphic design/first page graphic design.png " width=100%></div>
                                     <h3 class="item-title ">Playground, <i>Graphic Design</i></h4>
                                 </div>
                             </div>
                         </a>
+                        <div class="vl "></div>
+
+
+
+
+
                     </div>
                 </div>
             </div>
@@ -140,6 +148,7 @@
 
     </section>
     <script src="/script.js "></script>
+
 </body>
 
 
