--- a/wunderkind.html
+++ b/wunderkind.html
@@ -9,6 +9,8 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/07bc066b74.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
+
 </head>
 
 
@@ -55,6 +57,11 @@
                 <div class="image-wrapper">
                     <img width="40%" src="Images/wunderkind/readywise-mobile.gif">
                 </div>
+                <div class="image-wrapper">
+                    <video class="lazyload" width="900" autoplay muted loop>
+                        <source data-src="/Images/wunderkind/hairstory.mp4"src="/Images/wunderkind/hairstory.mp4" type="video/mp4">    </video>
+                </div>
+
             </div>
         </div>
 
