--- a/pet.html
+++ b/pet.html
@@ -153,7 +153,7 @@
             <div class="project-end">
                 <hr class="project-divider">
                 <div class="back-logo">
-                    <a href="https://www.xiaoxuanwu.com/"><img src="Images/Arrow 1.png">
+                    <a href="https://www.xiaoxuan.work/"><img src="Images/Arrow 1.png">
                         <p class="back-text">Back to all projects</p>
                     </a>
                 </div>
