--- a/wunderkind.html
+++ b/wunderkind.html
@@ -52,7 +52,8 @@
 
                 <h2>Gamification</h2>
                 <div class="image-wrapper">
-                    <img width="100%" src="Images/wunderkind/small-readywise-gamification-mockup.gif">
+                    <video class="lazyload" width="900" autoplay muted loop>
+                        <source data-src="/Images/wunderkind/gamification-1.mp4"src="/Images/wunderkind/gamification-1.mp4" type="video/mp4">    </video>
                 </div>
                 <div class="image-wrapper">
                     <img width="40%" src="Images/wunderkind/readywise-mobile.gif">
@@ -66,20 +67,21 @@
         </div>
 
         <div class="project-end">
-            <div class="back-logo">
-                <a href="https://www.xiaoxuanwu.com/"><img src="Images/Arrow 1.png">
+            <hr class="project-divider">
+            <div class="back-group">
+                <a href="https://www.xiaoxuan.work/"><img src="Images/Arrow 1.png">
                     <p class="back-text">Back to all projects</p>
                 </a>
             </div>
         </div>
-        <hr class="project-divider">
 
 
-        <div class="footer">
-            <h4 class="footer-left"><a style="margin-right: 30px;">about</a> <a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></h4>
-            <h4 class="footer-right">Designed and coded by me</h4>
+
+        <div class="footer ">
+            <h4 class="footer-left "> <a>resume</a></h4>
+            <p class="footer-right ">Designed and coded by me</p>
+
         </div>
-
 
     </section>
 </body>
