--- a/wunderkind.html
+++ b/wunderkind.html
@@ -15,7 +15,7 @@
 
 
 
-<body>
+<body id="main-scrollbar">
 
 
     <section>
@@ -31,11 +31,11 @@
             <div class="page-title-wrapper">
                 <div class="icon-title">
                     <div class="back-logo">
-                        <a href="https://www.xiaoxuanwu.com/"><img src="Images/Arrow 1.png"></a>
+                        <a href="https://www.xiaoxuanwu.work"><img src="Images/Arrow 1.png"></a>
                     </div>
 
                     <div class="project-title-wrapper">
-                        <p class="project-subhead">CX, Visual Design</p>
+                        <p class="project-subhead">CX, Marketing Design</p>
                         <h2 class="project-heading">Wunderkind</h2>
                     </div>
                 </div>
@@ -47,19 +47,16 @@
                     <img src="Images/wunderkind/weezie desktop mock.jpg">
                 </div>
                 <div class="image-wrapper">
-                    <img src="Images/wunderkind/Weezie email mock up.gif">
+                    <img src="Images/wunderkind/weezie mockup.png">
                 </div>
 
                 <h2>Gamification</h2>
                 <div class="image-wrapper">
-                    <video class="lazyload" width="900" autoplay muted loop>
+                    <video class="lazyload" width="100%" autoplay muted loop>
                         <source data-src="/Images/wunderkind/gamification-1.mp4"src="/Images/wunderkind/gamification-1.mp4" type="video/mp4">    </video>
                 </div>
                 <div class="image-wrapper">
-                    <img width="40%" src="Images/wunderkind/readywise-mobile.gif">
-                </div>
-                <div class="image-wrapper">
-                    <video class="lazyload" width="900" autoplay muted loop>
+                    <video class="lazyload" width="100%" autoplay muted loop>
                         <source data-src="/Images/wunderkind/hairstory.mp4"src="/Images/wunderkind/hairstory.mp4" type="video/mp4">    </video>
                 </div>
 
