--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/07bc066b74.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/smooth-scrollbar@8.7.0/dist/smooth-scrollbar.js"></script>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
@@ -26,129 +31,128 @@
 
 </head>
 
-<body>
+<body id="main-scrollbar">
 
-    <section>
-        <div class="cursor"></div>
 
-        <div class="header">
-            <div class="logo">
-                <img src="Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
-                <hr class="header-divider">
-            </div>
+    <div class="cursor"></div>
+
+    <div class="header">
+        <div class="logo">
+            <img src="Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
+            <hr class="header-divider">
         </div>
+    </div>
 
 
-        <div class="main-content-container">
-            <div class="hero">
-                <h2>On the premise of meeting users' needs, it is my pursuit to communicate with them
-                </h2>
-            </div>
+    <section class="main-content-container">
+        <div class="hero">
+            <h2>On the premise of meeting users' needs, it is my pursuit to communicate with them
+            </h2>
+    </section>
 
 
-            <div class="track">
-                <div class="camera">
-                    <div class="frame" onLoad="pageScroll()">
-                        <div class="item">
-                            <p class="project-title">Selected projects</h4>
+    <section class="track horizontal">
+        <div class="camera pin-wrap" id="pinThis-0">
+            <div class="frame animation-wrap to-right" id="animateThis-0" onLoad="pageScroll()">
+                <div class="item">
+                    <p class="project-title">Selected projects</h4>
+                </div>
+
+                <a class="item clickable-item rellax" data-rellax-speed="-10" href="pet.html ">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>1</h1>
+                        </div>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="Images/Pet images/pet first page.png "></div>
+                            <h3 class="item-title ">Pet Adoption, <i>Product Design</i></h4>
                         </div>
 
-                        <a class="item clickable-item rellax" data-rellax-speed="-10" href="pet.html ">
-                            <div class="item-content-wrapper ">
-                                <div class="vl "></div>
-                                <div class="item-number ">
-                                    <h1>1</h1>
-                                </div>
-                                <div class="image-title ">
-                                    <div class="img-hover-zoom ">
-                                        <img src="Images/Pet images/pet first page.png "></div>
-                                    <h3 class="item-title ">Pet Adoption, <i>Product Design</i></h4>
-                                </div>
-
-                            </div>
-                        </a>
-
-                        <a class="item clickable-item rellax" data-rellax-speed="-10" href="wunderkind.html">
-                            <div class="item-content-wrapper ">
-                                <div class="vl "></div>
-                                <div class="item-number ">
-                                    <h1>2</h1>
-                                </div>
-                                <div class="image-title ">
-                                    <div class="img-hover-zoom ">
-                                        <img src="Images/wunderkind/wunderkind first page.png " width=100%></div>
-                                    <h4 class="item-title ">Wunderkind,<i>CX Design, Marketing Design</i></h4>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a class="item clickable-item rellax" data-rellax-speed="-10" href="wunderkind.html">
-                            <div class="item-content-wrapper ">
-                                <div class="vl "></div>
-                                <div class="item-number ">
-                                    <h1>3</h1>
-                                </div>
-                                <div class="image-title ">
-                                    <div class="img-hover-zoom ">
-                                        <img src="Images/Image.jpg " width=100%></div>
-                                    <h3 class="item-title ">Pet Adoption</h4>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a class="item clickable-item" href="wunderkind.html">
-                            <div class="item-content-wrapper ">
-                                <div class="vl "></div>
-                                <div class="item-number ">
-                                    <h1>3</h1>
-                                </div>
-                                <div class="image-title ">
-                                    <div class="img-hover-zoom ">
-                                        <img src="Images/Image.jpg " width=100%></div>
-                                    <h3 class="item-title ">Pet Adoption</h4>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a class="item clickable-item" href="graphic-design.html">
-                            <div class="item-content-wrapper ">
-                                <div class="vl "></div>
-                                <div class="item-number ">
-                                    <h1>3</h1>
-                                </div>
-                                <div class="image-title">
-                                    <div class="img-hover-zoom ">
-                                        <img src="Images/Graphic design/first page graphic design.png " width=100%></div>
-                                    <h3 class="item-title ">Playground, <i>Graphic Design</i></h4>
-                                </div>
-                            </div>
-                        </a>
-                        <div class="vl "></div>
-
-
-
-
-
                     </div>
-                </div>
-            </div>
+                </a>
+
+                <a class="item clickable-item rellax" data-rellax-speed="-10" href="wunderkind.html">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>2</h1>
+                        </div>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="Images/wunderkind/wunderkind first page.png " width=100%></div>
+                            <h4 class="item-title ">Wunderkind,<i>CX Design, Marketing Design</i></h4>
+                        </div>
+                    </div>
+                </a>
+
+                <a class="item clickable-item rellax" data-rellax-speed="-10" href="wunderkind.html">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>3</h1>
+                        </div>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="Images/Image.jpg " width=100%></div>
+                            <h3 class="item-title ">Pet Adoption</h4>
+                        </div>
+                    </div>
+                </a>
+
+                <a class="item clickable-item" href="wunderkind.html">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>3</h1>
+                        </div>
+                        <div class="image-title ">
+                            <div class="img-hover-zoom ">
+                                <img src="Images/Image.jpg " width=100%></div>
+                            <h3 class="item-title ">Pet Adoption</h4>
+                        </div>
+                    </div>
+                </a>
+
+                <a class="item clickable-item" href="graphic-design.html">
+                    <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+                        <div class="item-number ">
+                            <h1>3</h1>
+                        </div>
+                        <div class="image-title">
+                            <div class="img-hover-zoom ">
+                                <img src="Images/Graphic design/first page graphic design.png " width=100%></div>
+                            <h3 class="item-title ">Playground, <i>Graphic Design</i></h4>
+                        </div>
+                    </div>
+                </a>
+                <div class="vl "></div>
 
 
 
 
-            <div class="introduction ">
-                <h2>
-                    Xiaoxuan Wu is a product/visual designer based in New York. Currently designing at <i>Wunderkind</i>, a digital marketing company.</h2>
+
             </div>
         </div>
-        <div class="footer ">
-            <h4 class="footer-left "> <a>resume</a></h4>
-            <p class="footer-right ">Designed and coded by me</p>
-
-        </div>
-
-
     </section>
+
+
+
+
+    <section class="introduction ">
+        <h2>
+            Xiaoxuan Wu is a product/visual designer based in New York. Currently designing at <i>Wunderkind</i>, a digital marketing company.</h2>
+    </section>
+    </div>
+    <div class="footer ">
+        <h4 class="footer-left "> <a>resume</a></h4>
+        <p class="footer-right ">Designed and coded by me</p>
+
+    </div>
+
+
     <script src="/script.js "></script>
 
 </body>
