--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
                 <a class="item clickable-item rellax" data-rellax-speed="-10" href="pet.html ">
                     <div class="item-content-wrapper ">
+                        <div class="vl "></div>
+
                         <div class="item-number ">
                             <h1>1</h1>
                         </div>
