--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     <section class="track horizontal">
         <div class="camera pin-wrap" id="pinThis-0">
             <div class="frame animation-wrap to-right" id="animateThis-0" onLoad="pageScroll()">
-                <div class="item">
-                    <p class="project-title">Selected projects</h4>
+                <div class="item project-title"style="display: block;">
+                   <h2 >Selected</h2>
+                    <h2 >Project</h2>
                 </div>
 
                 <a class="item clickable-item rellax" data-rellax-speed="-10" href="pet.html ">
@@ -66,7 +67,7 @@
                         <div class="image-title ">
                             <div class="img-hover-zoom ">
                                 <img src="Images/Pet images/pet first page.png "></div>
-                            <h3 class="item-title ">Pet Adoption, <i>Product Design</i></h4>
+                            <h4 class="item-title ">Pet Adoption, <i class="item-type">Product Design</i></h4>
                         </div>
 
                     </div>
@@ -81,13 +82,13 @@
                         <div class="image-title ">
                             <div class="img-hover-zoom ">
                                 <img src="Images/wunderkind/wunderkind first page.png " width=100%></div>
-                            <h4 class="item-title ">Wunderkind,<i>CX Design, Marketing Design</i></h4>
+                            <h4 class="item-title ">Wunderkind,<i class="item-type">UI Design, Marketing Design</i></h4>
                         </div>
                     </div>
                 </a>
 
-                <a class="item clickable-item rellax" data-rellax-speed="-10" href="wunderkind.html">
-                    <div class="item-content-wrapper ">
+                <a class="item clickable-item"  href="wunderkind.html">
+                    <div class="item-content-wrapper">
                         <div class="vl "></div>
                         <div class="item-number ">
                             <h1>3</h1>
@@ -95,7 +96,7 @@
                         <div class="image-title ">
                             <div class="img-hover-zoom ">
                                 <img src="Images/Image.jpg " width=100%></div>
-                            <h3 class="item-title ">Pet Adoption</h4>
+                            <h4 class="item-title">Medical Student Dashboard, <i class="item-type">Product Design</i></h4>
                         </div>
                     </div>
                 </a>
@@ -136,11 +137,11 @@
 
     <section class="introduction ">
         <h2>
-            Xiaoxuan Wu is a product/visual designer based in New York. Currently designing at <i>Wunderkind</i>, a digital marketing company.</h2>
+            Xiaoxuan Wu is a product designer based in New York. Currently designing at <i>Wunderkind</i>, a digital marketing company.</h2>
     </section>
     </div>
     <div class="footer ">
-        <h4 class="footer-left "> <a>resume</a></h4>
+        <p class="footer-left "> <a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
         <p class="footer-right ">Designed and coded by me</p>
 
     </div>
