--- a/wunderkind.html
+++ b/wunderkind.html
@@ -75,7 +75,7 @@
 
 
         <div class="footer ">
-            <h4 class="footer-left "> <a>resume</a></h4>
+            <a></a> <p class="footer-left ">resume</p></a>
             <p class="footer-right ">Designed and coded by me</p>
 
         </div>
